# Rhythmo

./: .gitignore  BPMAppIcon.psd  BPMAppIcon2.psd  LICENSE.md  NOTICE  README.md  build.gradle  gradle.properties
app/: build.gradle  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/dev/res/values/: app_name.xml
app/src/main/: AndroidManifest.xml
app/src/main/jni/: AdvancedMediaPlayer.cpp  AdvancedMediaPlayer.h  BPMDetector.cpp  CMakeLists.txt
app/src/main/res/anim/: fab_close.xml  fab_open.xml  no_anim.xml  rotate_backward.xml  rotate_forward.xml
app/src/main/res/drawable/: add_button.xml  icon_apply.xml  icon_drag.xml  icon_more.xml  icon_next.xml  icon_pause_large.xml  icon_pause_normal.xml  icon_play_large.xml  icon_play_normal.xml  icon_previous.xml  play_button_large.xml  play_button_normal.xml  playback.xml  search_text_background.xml  search_text_background_blue.xml  seekbar_background.xml  seekbar_background_red.xml  seekbar_foreground.xml  seekbar_foreground_blue.xml  seekbar_foreground_red.xml  seekbar_progress.xml  seekbar_progress_blue.xml  seekbar_progress_red.xml  seekbar_thumb.xml  seekbar_thumb_blue.xml  seekbar_thumb_red.xml  shadow_bottom.xml  shadow_top.xml  tap_button.xml  (+2 more)
app/src/main/res/drawable-hdpi/: Thumbs.db
app/src/main/res/drawable-mdpi/: Thumbs.db
app/src/main/res/drawable-v21/: tap_button.xml  tap_button_blue.xml  tap_button_red.xml
app/src/main/res/drawable-xxhdpi/: Thumbs.db  splash_screen.xml
gradle/wrapper/: gradle-wrapper.properties
refs/: BPMAppIcon3.psd  LogoDesign.psd  LogoTile.psd
(+252 files in other folders)
